- [add] options to cache WDSP filter impulse data in Setup-DSP. Can also store this data to a .dat file. Read the tool tips. Improves mode switch speed and Thetis start up time
- [add] tci spot message now supports far more modes
- [add] defaults and 'stealth' mode for two tone frequencies in setup->tests
- [change] exporting a tx profile will now ask for destination location and filename. It will complain if filename already exists
- [change] restored step attenuator RX1 if HERMES is used. Unsure why I disabled it a few years ago
- [change] the bespoke TCI command tx_frequency has changed back to the following as per the TCI protocol, tx_frequency:3700000; .There is now a bespoke Thetis message also sent out at the same time, tx_frequency_thetis:3700000,b80m,false,false;
- [change] refactor serial port pin change detection code for slight performance improvements
- [change] display vsync defaulted to on for new databases. I would advise turning this on if not already
- [change] all RX display offsets are now done in one place in the code
- [change] TX-ATT label has been changed to [S-ATT]
- [change] spectrum gradient change. Now -150 to +10 dBm.  NOTE: all gradients will need to be adjusted
- [change] cursor/peak readout colours moved to Appearance-General
- [change] float precision maintained for display/meter calibration offsets
- [change] limit setPan to filter item display spectrum to 1/8 of framerate (~266ms update interval when vfo is changing the spectrum pan)
- [change] refactored midi wheel code to try and remove the lag when spinning a wheel very fast. Slider/knob will still have same issue. Behringer devices PL-1/Micro/etc do not use this new code
- [change] rx filter can now be +-20kHz wide to mirror TX filter widths. Shift also needs to be set as that will (at the moment) imply a width limit