@@ -29,6 +29,8 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] options to cache WDSP filter impulse data in Setup-DSP. Can also store this data to a .dat file. Read the tool tips. Improves mode switch speed and Thetis start up time
 - [add] tci spot message now supports far more modes
 - [add] defaults and 'stealth' mode for two tone frequencies in setup->tests
+- [add] pause button in the info bar buttons to pause the display. The radio etc will continue when paused, noise floor calculations will not
+- [add] experimental pulsed/pecker tune available in Setup->Transmit. (Tune only, not available for TwoTone)
 - [change] exporting a tx profile will now ask for destination location and filename. It will complain if filename already exists
 - [change] restored step attenuator RX1 if HERMES is used. Unsure why I disabled it a few years ago
 - [change] the bespoke TCI command tx_frequency has changed back to the following as per the TCI protocol, tx_frequency:3700000; .There is now a bespoke Thetis message also sent out at the same time, tx_frequency_thetis:3700000,b80m,false,false;
@@ -73,7 +75,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [fix] vfo band text now updated when frequency changes for the multimeter vfo item. Note: rate limited to 250ms unlike legacy meter
 - [fix] rx2 mnf position now correctly located when in panadaptor view
 - [fix] fix issue that could cause repeated errors in mmio when a key is not found, perhaps caused by old db
-- [fix] outbound mmio queue fix for data node
+- [fix] outbound mmio queue fix for data node, data out queues are not saved to db, and limits have been placed on max queue size
 - [fix] fixed issue where rotator control item would sometimes miss the stop command on click. Note. mouse up+down will trigger this when the red circle is shown
 
 ## v2.10.3.8 - Change Log
